<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhonesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/resetButton"
            android:onClick="onResetButttonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <ToggleButton
            android:id="@+id/syncToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/discardChanges"
            android:textOn="@string/saveChanges" />

    </LinearLayout>

    <ListView
        android:id="@+id/phonesListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>