<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <LinearLayout
        android:id="@+id/todoListTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:text="@string/todoList"
            android:textSize="20dp"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/normalListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/listControlButtonPanel"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todoListTextLayout" />

    <LinearLayout
        android:id="@+id/listControlButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/addItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddItemButtonClicked"
            android:text="@string/addItem" />

        <Button
            android:id="@+id/clearListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="onClearListButtonClicked"
            android:text="@string/clearList" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>